// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test SearchInput Component should match to snapshot 1`] = `
<SearchInput
  filter="ALL"
  isTrayOpen={false}
  keyword=""
  onChangeKeyword={[Function]}
>
  <input
    className="SearchInput"
    onChange={[Function]}
    placeholder="Search widgets"
    type="text"
    value=""
  />
</SearchInput>
`;

exports[`Test SearchInput Component should match to snapshot when filter !== ALL 1`] = `
<SearchInput
  filter="FAVORITES"
  isTrayOpen={false}
  keyword=""
  onChangeKeyword={[Function]}
>
  <input
    className="SearchInput"
    onChange={[Function]}
    placeholder="Search in \\"Favorites\\""
    type="text"
    value=""
  />
</SearchInput>
`;
